// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"  { , }  " 1`] = `
flowMapping (1:3 ~ 1:8)
1 | ··{·,·}··¶
  |   ^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { , }  " 2`] = `
mappingItem (1:5 ~ 1:5)
1 | ··{·,·}··¶
  |     ~
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  { , }  " 3`] = `
mappingKey (1:5 ~ 1:5)
1 | ··{·,·}··¶
  |     ~
<mappingKey>
  <null />
</mappingKey>
`;

exports[`"  { , }  " 4`] = `
mappingValue (1:5 ~ 1:5)
1 | ··{·,·}··¶
  |     ~
<mappingValue>
  <null />
</mappingValue>
`;

exports[`"  { : }  " 1`] = `
flowMapping (1:3 ~ 1:8)
1 | ··{·:·}··¶
  |   ^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { : }  " 2`] = `
mappingItem (1:5 ~ 1:6)
1 | ··{·:·}··¶
  |     ^
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  { : }  " 3`] = `
mappingKey (1:5 ~ 1:5)
1 | ··{·:·}··¶
  |     ~
<mappingKey>
  <null />
</mappingKey>
`;

exports[`"  { : }  " 4`] = `
mappingValue (1:5 ~ 1:6)
1 | ··{·:·}··¶
  |     ^
<mappingValue>
  <null />
</mappingValue>
`;

exports[`"  { : 123 }  " 1`] = `
flowMapping (1:3 ~ 1:12)
1 | ··{·:·123·}··¶
  |   ^^^^^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { : 123 }  " 2`] = `
mappingItem (1:5 ~ 1:10)
1 | ··{·:·123·}··¶
  |     ^^^^^
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</mappingItem>
`;

exports[`"  { : 123 }  " 3`] = `
mappingKey (1:5 ~ 1:5)
1 | ··{·:·123·}··¶
  |     ~
<mappingKey>
  <null />
</mappingKey>
`;

exports[`"  { : 123 }  " 4`] = `
mappingValue (1:5 ~ 1:10)
1 | ··{·:·123·}··¶
  |     ^^^^^
<mappingValue>
  <plain value="123" />
</mappingValue>
`;

exports[`"  { ? : }  " 1`] = `
flowMapping (1:3 ~ 1:10)
1 | ··{·?·:·}··¶
  |   ^^^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { ? : }  " 2`] = `
mappingItem (1:5 ~ 1:8)
1 | ··{·?·:·}··¶
  |     ^^^
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  { ? : }  " 3`] = `
mappingKey (1:5 ~ 1:6)
1 | ··{·?·:·}··¶
  |     ^
<mappingKey>
  <null />
</mappingKey>
`;

exports[`"  { ? : }  " 4`] = `
mappingValue (1:7 ~ 1:8)
1 | ··{·?·:·}··¶
  |       ^
<mappingValue>
  <null />
</mappingValue>
`;

exports[`"  { ? : 123 }  " 1`] = `
flowMapping (1:3 ~ 1:14)
1 | ··{·?·:·123·}··¶
  |   ^^^^^^^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { ? : 123 }  " 2`] = `
mappingItem (1:5 ~ 1:12)
1 | ··{·?·:·123·}··¶
  |     ^^^^^^^
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</mappingItem>
`;

exports[`"  { ? : 123 }  " 3`] = `
mappingKey (1:5 ~ 1:6)
1 | ··{·?·:·123·}··¶
  |     ^
<mappingKey>
  <null />
</mappingKey>
`;

exports[`"  { ? : 123 }  " 4`] = `
mappingValue (1:7 ~ 1:12)
1 | ··{·?·:·123·}··¶
  |       ^^^^^
<mappingValue>
  <plain value="123" />
</mappingValue>
`;

exports[`"  { ? }  " 1`] = `
flowMapping (1:3 ~ 1:8)
1 | ··{·?·}··¶
  |   ^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { ? }  " 2`] = `
mappingItem (1:5 ~ 1:6)
1 | ··{·?·}··¶
  |     ^
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  { ? }  " 3`] = `
mappingKey (1:5 ~ 1:6)
1 | ··{·?·}··¶
  |     ^
<mappingKey>
  <null />
</mappingKey>
`;

exports[`"  { ? }  " 4`] = `
mappingValue (1:6 ~ 1:6)
1 | ··{·?·}··¶
  |      ~
<mappingValue>
  <null />
</mappingValue>
`;

exports[`"  { ? 123 : }  " 1`] = `
flowMapping (1:3 ~ 1:14)
1 | ··{·?·123·:·}··¶
  |   ^^^^^^^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { ? 123 : }  " 2`] = `
mappingItem (1:5 ~ 1:12)
1 | ··{·?·123·:·}··¶
  |     ^^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  { ? 123 : }  " 3`] = `
mappingKey (1:5 ~ 1:10)
1 | ··{·?·123·:·}··¶
  |     ^^^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { ? 123 : }  " 4`] = `
mappingValue (1:11 ~ 1:12)
1 | ··{·?·123·:·}··¶
  |           ^
<mappingValue>
  <null />
</mappingValue>
`;

exports[`"  { ? 123 : 456 }  " 1`] = `
flowMapping (1:3 ~ 1:18)
1 | ··{·?·123·:·456·}··¶
  |   ^^^^^^^^^^^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <plain value="456" />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { ? 123 : 456 }  " 2`] = `
mappingItem (1:5 ~ 1:16)
1 | ··{·?·123·:·456·}··¶
  |     ^^^^^^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <plain value="456" />
  </mappingValue>
</mappingItem>
`;

exports[`"  { ? 123 : 456 }  " 3`] = `
mappingKey (1:5 ~ 1:10)
1 | ··{·?·123·:·456·}··¶
  |     ^^^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { ? 123 : 456 }  " 4`] = `
mappingValue (1:11 ~ 1:16)
1 | ··{·?·123·:·456·}··¶
  |           ^^^^^
<mappingValue>
  <plain value="456" />
</mappingValue>
`;

exports[`"  { ? 123 }  " 1`] = `
flowMapping (1:3 ~ 1:12)
1 | ··{·?·123·}··¶
  |   ^^^^^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { ? 123 }  " 2`] = `
mappingItem (1:5 ~ 1:10)
1 | ··{·?·123·}··¶
  |     ^^^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  { ? 123 }  " 3`] = `
mappingKey (1:5 ~ 1:10)
1 | ··{·?·123·}··¶
  |     ^^^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { ? 123 }  " 4`] = `
mappingValue (1:10 ~ 1:10)
1 | ··{·?·123·}··¶
  |          ~
<mappingValue>
  <null />
</mappingValue>
`;

exports[`"  { 123 : }  " 1`] = `
flowMapping (1:3 ~ 1:12)
1 | ··{·123·:·}··¶
  |   ^^^^^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { 123 : }  " 2`] = `
mappingItem (1:5 ~ 1:10)
1 | ··{·123·:·}··¶
  |     ^^^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  { 123 : }  " 3`] = `
mappingKey (1:5 ~ 1:8)
1 | ··{·123·:·}··¶
  |     ^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { 123 : }  " 4`] = `
mappingValue (1:9 ~ 1:10)
1 | ··{·123·:·}··¶
  |         ^
<mappingValue>
  <null />
</mappingValue>
`;

exports[`"  { 123 : 456 }  " 1`] = `
flowMapping (1:3 ~ 1:16)
1 | ··{·123·:·456·}··¶
  |   ^^^^^^^^^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <plain value="456" />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { 123 : 456 }  " 2`] = `
mappingItem (1:5 ~ 1:14)
1 | ··{·123·:·456·}··¶
  |     ^^^^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <plain value="456" />
  </mappingValue>
</mappingItem>
`;

exports[`"  { 123 : 456 }  " 3`] = `
mappingKey (1:5 ~ 1:8)
1 | ··{·123·:·456·}··¶
  |     ^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { 123 : 456 }  " 4`] = `
mappingValue (1:9 ~ 1:14)
1 | ··{·123·:·456·}··¶
  |         ^^^^^
<mappingValue>
  <plain value="456" />
</mappingValue>
`;

exports[`"  { 123 }  " 1`] = `
flowMapping (1:3 ~ 1:10)
1 | ··{·123·}··¶
  |   ^^^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { 123 }  " 2`] = `
mappingItem (1:5 ~ 1:8)
1 | ··{·123·}··¶
  |     ^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  { 123 }  " 3`] = `
mappingKey (1:5 ~ 1:8)
1 | ··{·123·}··¶
  |     ^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { 123 }  " 4`] = `
mappingValue (1:8 ~ 1:8)
1 | ··{·123·}··¶
  |        ~
<mappingValue>
  <null />
</mappingValue>
`;

exports[`"  { 123, }  " 1`] = `
flowMapping (1:3 ~ 1:11)
1 | ··{·123,·}··¶
  |   ^^^^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { 123, }  " 2`] = `
mappingItem (1:5 ~ 1:8)
1 | ··{·123,·}··¶
  |     ^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  { 123, }  " 3`] = `
mappingKey (1:5 ~ 1:8)
1 | ··{·123,·}··¶
  |     ^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { 123, }  " 4`] = `
mappingValue (1:8 ~ 1:8)
1 | ··{·123,·}··¶
  |        ~
<mappingValue>
  <null />
</mappingValue>
`;

exports[`"  { 123,, }  " 1`] = `
flowMapping (1:3 ~ 1:12)
1 | ··{·123,,·}··¶
  |   ^^^^^^^^^
<flowMapping>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowMapping>
`;

exports[`"  { 123,, }  " 2`] = `
mappingItem (1:5 ~ 1:8)
1 | ··{·123,,·}··¶
  |     ^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  { 123,, }  " 3`] = `
mappingKey (1:5 ~ 1:8)
1 | ··{·123,,·}··¶
  |     ^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { 123,, }  " 4`] = `
mappingValue (1:8 ~ 1:8)
1 | ··{·123,,·}··¶
  |        ~
<mappingValue>
  <null />
</mappingValue>
`;
